added a team section, added a footer

--- a/scss/core.scss
+++ b/scss/core.scss
@@ -23,5 +23,7 @@ TABLE OF CONTENTS
 @import 'partials/buttons';
 @import 'partials/timeline';
 @import 'partials/team';
+@import 'partials/faq';
+@import 'partials/footer';
 @import 'partials/pageloader';
 @import 'partials/animations';
