--- a/scss/partials/_animations.scss
+++ b/scss/partials/_animations.scss
@@ -80,3 +80,50 @@
     -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out;
 }
+
+
+
+
+
+
+//
+@keyframes rotating
+{
+    from
+    {
+        transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+    }
+    to
+    {
+        transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+}
+@-webkit-keyframes rotating
+{
+    from
+    {
+        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+    }
+    to
+    {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+}
+.rotating
+{
+    -webkit-animation: rotating 6s linear infinite;
+    -moz-animation: rotating 6s linear infinite;
+    -ms-animation: rotating 6s linear infinite;
+    -o-animation: rotating 6s linear infinite;
+    animation: rotating 6s linear infinite;
+}
