finished landing page, need to add animation details, fix some text colors, fix responsiveness, clean, comment, and standardize code

--- a/scss/core.scss
+++ b/scss/core.scss
@@ -24,6 +24,8 @@ TABLE OF CONTENTS
 @import 'partials/timeline';
 @import 'partials/team';
 @import 'partials/faq';
+@import 'partials/blog';
 @import 'partials/footer';
+@import 'partials/forms';
 @import 'partials/pageloader';
 @import 'partials/animations';
