--- a/scss/partials/_animations.scss
+++ b/scss/partials/_animations.scss
@@ -127,3 +127,31 @@
     -o-animation: rotating 6s linear infinite;
     animation: rotating 6s linear infinite;
 }
+
+
+
+/* ==========================================================================
+9. Gelatine animation
+========================================================================== */
+
+@-webkit-keyframes gelatine {
+    from, to { -webkit-transform: scale(1, 1); }
+    25% { -webkit-transform: scale(0.9, 1.1); }
+    50% { -webkit-transform: scale(1.1, 0.9); }
+    75% { -webkit-transform: scale(0.95, 1.05); }
+}
+@keyframes gelatine {
+    from, to { transform: scale(1, 1); }
+    25% { transform: scale(0.9, 1.1); }
+    50% { transform: scale(1.1, 0.9); }
+    75% { transform: scale(0.95, 1.05); }
+}
+//Settings
+.gelatine {
+    -webkit-animation: gelatine 0.6s;
+    animation: gelatine 0.6s;
+    -webkit-animation-duration: 0.6s;
+    animation-duration: 0.6s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
